# GPT2Ro

./: .gitignore  LICENSE  README.md  RoDataset.py  config.py  create_tokenizer.py  generate.py  requirements.txt  train.py
data/: README.md
data/processing/: merge_corpora.py  opus_clean.py  opus_download.sh  opus_ro_get.py  oscar_clean.py  oscar_download.sh  requirements.txt  text_cleaner.py  wiki_clean.py  wiki_download.sh
data/processing/rust_processing/: Cargo.toml  README.md
data/processing/rust_processing/src/: wc_filter.rs  wc_histogram.rs
experiments/gpt2_ro/: frozen.yml  unfrozen.yml
model_deployment/: Cargo.toml  README.md
model_deployment/python_utils/: convert_model.py
model_deployment/src/: convert_tensors.rs  generation_utils.rs  gpt2.rs  string_utils.rs
utils/: model_utils.py  random_access_file_reader.py
